--- a/app/assets/stylesheets/utilities.css.scss
+++ b/app/assets/stylesheets/utilities.css.scss
@@ -116,6 +116,14 @@ label.switchery-label {
 	}
 }
 
+.form-group {
+	label.required:after {
+		content: ' *';
+		color: $blue;
+
+	}
+}
+
 
 /***********
 Help Tooltip Icon
