--- a/app/views/stage/index.html.erb
+++ b/app/views/stage/index.html.erb
@@ -90,7 +90,7 @@
 			</div>
 		</div>
 	</article>
-</script>
+</div></script>
 
 <script type="text/x-template" id="splits"><div>
 	<aside class="col-xs-12 col-sm-4 full-bg">
@@ -105,55 +105,145 @@
 		</p>
 	</aside>
 	<article class="col-xs-12 col-sm-8">
-		<h2>
-			<strong>Your Splits:</strong>
-			<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
-		</h2>
 		<div class="row">
-			<google-map :markers="eventData.splits" :location="modalSplit"></google-map>
-		</div>
-		<div class="row">
-			<data-tables :rows="eventData.splits" v-on:edit="modalSplit = $event; modalNew = false">
-				<tr slot="header">
-					<th></th>
-					<th>Name</th>
-					<th>
-						Dist.
-						<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
-					</th>
-					<th>
-						V. Gain
-						<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
-					</th>
-					<th>
-						V. Loss
-						<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
-					</th>
-					<th colspan="2" data-orderable="false">
-						Location Info
-						<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
-					</th>
-				</tr>
-				<template slot="row" scope="vm">
-					<td><i class="glyphicon glyphicon-flag"></i></td>
-					<td>{{ vm.row.name }}</td>
-					<td>{{ vm.row.distance }}</td>
-					<td>{{ vm.row.verticalGain }}</td>
-					<td>{{ vm.row.verticalLoss }}</td>
-					<td><a data-toggle="modal" data-target="#js-split-modal" v-on:click="vm.$emit('edit')">Edit Participant</a></td>
-					<td><a v-on:click="vm.$emit('remove')"><i class="glyphicon glyphicon-remove-circle"></i></a></td>
-				</template>
-			</data-tables>
-		</div>
-		<div class="row">
-			<p class="pull-left">
-				<button type="button" class="btn btn-success" data-toggle="modal" data-target="#js-split-modal" v-on:click="modalSplit = {}; modalNew = true">Add New Split&nbsp;<i class="glyphicon glyphicon-plus"></i></button>
-				<button type="button" class="btn btn-default">Import GPX File</button>
-			</p>
-			<router-link to="/splits" class="btn btn-primary pull-right">Continue&nbsp;<i class="glyphicon glyphicon-arrow-right"></i></router-link>
+			<div class="col-xs-7">
+				<h5>
+					<strong>Your Splits:</strong>
+					<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
+				</h5>
+			</div>
+			<div class="col-xs-5">
+				<div class="input-group">
+					<input type="text" class="form-control" v-model="filter" placeholder="Filter:"/>
+					<span class="input-group-btn"><span class="btn btn-success"><i class="glyphicon glyphicon-search"></i>Find Split</span></span>
+				</div>
+			</div>
+			<div class="col-xs-12">
+				<google-map :markers="eventData.splits" :location="modalData"></google-map>
+			</div>
+			<div class="col-xs-12">
+				<data-tables :rows="eventData.splits" :filter="filter" v-on:edit="modalData = $event">
+					<tr slot="header">
+						<th></th>
+						<th data-orderable="false">Name</th>
+						<th data-orderable="false">
+							Dist.
+							<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
+						</th>
+						<th data-orderable="false">
+							V. Gain
+							<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
+						</th>
+						<th data-orderable="false">
+							V. Loss
+							<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
+						</th>
+						<th colspan="2" data-orderable="false">
+							Location Info
+							<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
+						</th>
+					</tr>
+					<template slot="row" scope="vm">
+						<td><i class="glyphicon glyphicon-flag"></i></td>
+						<td>{{ vm.row.name }}</td>
+						<td>{{ vm.row.distance }}</td>
+						<td>{{ vm.row.verticalGain }}</td>
+						<td>{{ vm.row.verticalLoss }}</td>
+						<td><a data-toggle="modal" data-target="#js-split-modal" v-on:click="vm.$emit('edit')">Edit Split</a></td>
+						<td><a v-on:click="vm.$emit('remove')"><i class="glyphicon glyphicon-remove-circle"></i></a></td>
+					</template>
+				</data-tables>
+			</div>
+			<div class="col-xs-12">
+				<p class="pull-left">
+					<button type="button" class="btn btn-success" data-toggle="modal" data-target="#js-split-modal" v-on:click="modalData = blank()">Add New Split&nbsp;<i class="glyphicon glyphicon-plus"></i></button>
+					<button type="button" class="btn btn-default">Import GPX File</button>
+				</p>
+				<router-link to="/splits" class="btn btn-primary pull-right">Continue&nbsp;<i class="glyphicon glyphicon-arrow-right"></i></router-link>
+			</div>
 		</div>
 	</article>
-	<split-modal :isNew="modalNew" :split="modalSplit" v-on:new="eventData.splits.push( modalSplit )"></split-modal>
+	<edit-modal v-model="modalData" :validator="isValid" v-on:done="!( modalData._dtid ) && eventData.splits.push( modalData )" inline-template>
+		<div id="js-split-modal" tabindex="-1" role="dialog" class="modal fade">
+			<div class="modal-dialog modal-lg" role="document">
+				<div class="modal-content">
+					<div class="modal-body">
+
+						<div class="row">
+							<div class="col-xs-6">
+
+								<div class="form-group col-xs-6">
+									<label class="required">Split Name</label>
+									<input type="text" class="form-control" v-model="model.name">
+								</div>
+								<div class="form-group col-xs-6">
+									<label class="required">Description</label>
+									<input type="text" class="form-control" v-model="model.description">
+								</div>
+								<div class="form-group col-xs-6">
+									<label class="required">Distance From Start</label>
+									<input type="text" class="form-control" v-model="model.distance" v-mask="{ alias: 'decimal' }">
+								</div>
+								<div class="form-group col-xs-6">
+									<label class="required">Time Recording</label>
+									<label class="radio"><input type="radio" class="form-control" name="split-time" value="in" v-model="model.times">Time In</label>
+									<label class="radio"><input type="radio" class="form-control" name="split-time" value="inandout" v-model="model.times">Time In and Out</label>
+								</div>
+								<div class="form-group col-xs-6">
+									<label class="required">Vertical Gain From Start</label>
+									<input type="text" class="form-control" v-model="model.verticalGain" v-mask="{ alias: 'decimal' }">
+								</div>
+								<div class="form-group col-xs-6">
+									<label class="required">Vertical Loss From Start</label>
+									<input type="text" class="form-control" v-model="model.verticalLoss" v-mask="{ alias: 'decimal' }">
+								</div>
+								<div class="col-xs-12">
+									<h4><strong>Add A Location</strong></h4>
+								</div>
+								<div class="form-group col-xs-12">
+									<label>Name of Location</label>
+									<div class="row">
+										<div class="col-xs-6">
+											<input type="text" class="form-control" v-model="model.locationName">
+										</div>
+										<div class="col-xs-6 form-control-fill">
+											<span>or</span>
+											<select class="form-control">
+												<option selected disabled>Select One</option>
+											</select>
+										</div>
+									</div>
+								</div>
+								<div class="form-group col-xs-4">
+									<label>Latitude</label>
+									<input type="text" class="form-control" v-model="model.lat" v-mask="{ alias: 'decimal' }">
+								</div>
+								<div class="form-group col-xs-4">
+									<label>Longitude</label>
+									<input type="text" class="form-control" v-model="model.lng" v-mask="{ alias: 'decimal' }">
+								</div>
+								<div class="form-group col-xs-4">
+									<label>Elevation</label>
+									<input type="text" class="form-control" v-model="model.elevation" v-mask="{ alias: 'integer' }">
+								</div>
+								<div class="col-xs-12">
+									<span class="brackets" data-dismiss="modal"><a>Cancel</a></span>
+									<button type="button" class="btn btn-primary" data-dismiss="modal" v-bind:disabled="valid" v-on:click="$emit('done')">
+										<template v-if="!model._dtid">Add Split</template>
+										<template v-else>Done</template>
+									</button>
+								</div>
+							</div>
+							<div class="col-xs-6">
+								<google-map :location="model"></google-map>
+							</div>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</edit-modal>
 </div></script>
 
 <script type="text/x-template" id="participants"><div>
@@ -170,35 +260,48 @@
 	</aside>
 	<article class="col-xs-12 col-sm-8">
 		<div class="row">
-			<data-tables :rows="eventData.participants" v-on:edit="modalData = $event; modalNew = false;">
-				<tr slot="header">
-					<th data-orderable="false">Name</th>
-					<th>M/F</th>
-					<th>DoB.</th>
-					<th>Location</th>
-					<th>
-						Bib&num;
-						<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
-					</th>
-					<th data-orderable="false">&nbsp;</th>
-				</tr>
-				<template slot="row" scope="vm">
-					<td>{{ vm.row.first }} {{ vm.row.last }}</td>
-					<td>{{ vm.row.gender }}</td>
-					<td>{{ vm.row.dob }}</td>
-					<td>{{ vm.row.city }}, {{ vm.row.state }}</td>
-					<td><a data-toggle="modal" data-target="#js-participant-modal" v-on:click="vm.$emit('edit')">Edit Participant</a></td>
-					<td><a v-on:click="vm.$emit('remove')">Delete</a></td>
-				</template>
-			</data-tables>
-			<p class="pull-left">
-				<button type="button" class="btn btn-success" data-toggle="modal" data-target="#js-participant-modal" v-on:click="modalData = blank()">Add New Particpant&nbsp;<i class="glyphicon glyphicon-plus"></i></button>
-				<button type="button" class="btn btn-default">Import CSV</button>
-			</p>
-			<router-link to="/splits" class="btn btn-primary pull-right">Continue&nbsp;<i class="glyphicon glyphicon-arrow-right"></i></router-link>
+			<div class="col-xs-7">
+				<h5><strong>Your Participants:</strong></h5>
+			</div>
+			<div class="col-xs-5">
+				<div class="input-group">
+					<input type="text" class="form-control" v-model="filter" placeholder="Filter:"/>
+					<span class="input-group-btn"><span class="btn btn-success"><i class="glyphicon glyphicon-search"></i>Find Participant</span></span>
+				</div>
+			</div>
+			<div class="col-xs-12">
+				<data-tables :rows="eventData.participants" :filter="filter" v-on:edit="modalData = $event; modalNew = false;">
+					<tr slot="header">
+						<th>Name</th>
+						<th>M/F</th>
+						<th>DoB.</th>
+						<th>Location</th>
+						<th>
+							Bib&num;
+							<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
+						</th>
+						<th colspan="2" data-orderable="false">&nbsp;</th>
+					</tr>
+					<template slot="row" scope="vm">
+						<td>{{ vm.row.first }} {{ vm.row.last }}</td>
+						<td>{{ vm.row.gender }}</td>
+						<td>{{ vm.row.dob }}</td>
+						<td>{{ vm.row.city }}, {{ vm.row.state }}</td>
+						<td>{{ vm.row.bibnumber }}</td>
+						<td><a data-toggle="modal" data-target="#js-participant-modal" v-on:click="vm.$emit('edit')">Edit Participant</a></td>
+						<td><a v-on:click="vm.$emit('remove')"><i class="glyphicon glyphicon-remove-circle"></i></a></td>
+					</template>
+				</data-tables>
+			</div>
+			<div class="col-xs-12">
+				<p class="pull-left">
+					<button type="button" class="btn btn-success" data-toggle="modal" data-target="#js-participant-modal" v-on:click="modalData = blank()">Add New Participant&nbsp;<i class="glyphicon glyphicon-plus"></i></button>
+					<button type="button" class="btn btn-default">Import CSV</button>
+				</p>
+				<router-link to="/splits" class="btn btn-primary pull-right">Continue&nbsp;<i class="glyphicon glyphicon-arrow-right"></i></router-link>
+			</div>
 		</div>
 	</article>
-	<!-- <participant-modal :isNew="modalNew" :participant="modalData" v-on:new=""></participant-modal> -->
 	<edit-modal v-model="modalData" :validator="isValid" v-on:done="!( modalData._dtid ) && eventData.participants.push( modalData )" inline-template>
 		<div id="js-participant-modal" tabindex="-1" role="dialog" class="modal fade">
 			<div class="modal-dialog" role="document">
@@ -226,7 +329,7 @@
 						</div>
 						<div class="form-group col-xs-6">
 							<label>Bib Number</label>
-							<input type="text" class="form-control" v-model="model.bibnumber" v-mask.insert="{ mask: '9{1,6}', placeholder: '' }"placeholder="example: 1234"></input>
+							<input type="text" class="form-control" v-model="model.bibnumber" v-mask.insert="{ alias: 'integer', placeholder: '' }" placeholder="example: 1234"></input>
 						</div>
 						<div class="form-group col-xs-6">
 							<label>Beacon URL</label>
